--- a/src/app/pages/plates/plate_main/main.html
+++ b/src/app/pages/plates/plate_main/main.html
@@ -138,9 +138,135 @@
         </div>
         <br>
         <div class="table-responsive">
+            <h3 class="text-center">Toplu Levha İsteği</h3>
+            <table class="table" st-pipe="vm.callServer" st-table="vm.displayed">
+                <thead>
+                <tr>
+                    <th ng-if="!showProcess">Seç</th>
+                    <th st-sort="no">Numarası</th>
+                    <th st-sort="picture_name">Levha Resmi</th>
+                    <th>İstek Tarihi</th>
+                    <th>Aciliyet Durumu</th>
+                    <th>İşlem</th>
+                    <th>Yapılmış İşlem</th>
+
+
+                </tr>
+                <tr>
+                    <th ng-if="!showProcess"><input type="checkbox" ng-click="vm.getSelected()"></th>
+                    <th><input st-search="no"/></th>
+                    <th></th>
+                    <th></th>
+                    <th></th>
+                    <th></th>
+                    <th></th>
+
+
+                </tr>
+                </thead>
+                <tbody ng-show="!vm.isLoading">
+                <tr ng-repeat="row in vm.displayed">
+                    <td ng-if="!showProcess" row-select="row" ng-click="vm.select(row)"></td>
+
+                    <td>{{row.no | uppercase}}</td>
+                    <td class="col-md-2">
+                        <center>
+                            <div class="row">
+                                <div class="col-md-12">
+                                    <div class="row">
+                                        <div class="text-center">
+                                            <img
+                                                    src="/client/getpic/{{row.picture_name}}"
+                                                    class="img-rounded"
+                                                    style="width:5em; height:4em;">
+
+                                        </div>
+                                    </div>
+
+                                </div>
+                            </div>
+                        </center>
+                    </td>
+                    <td class="col-md-2">
+                        <div class="row">
+                            <div class="col-md-12">
+                                {{row.request_date | date : "dd.MM.y"}}
+                            </div>
+                        </div>
+                    </td>
+
+                    <td class="col-md-2">
+                        <div class="row" ng-if="row.emergency === 1">
+                            <div class="col-md-8 btn btn-danger btn-circle" title="Çok Önemli"><i
+                                    class="fa fa-warning"> </i>
+                            </div>
+
+
+                        </div>
+                        <div class="row" ng-if="row.emergency === 2">
+                            <div class="col-md-8 btn btn-warning btn-circle" title="Önemli"><i
+                                    class="fa fa-warning"></i>
+                            </div>
+                        </div>
+                        <div class="row" ng-if="row.emergency === 3">
+                            <div class="col-md-8 btn btn-primary  btn-circle" title="Az Önemli"><i
+                                    class="fa fa-warning"></i>
+                            </div>
+                        </div>
+                    </td>
+                    <td class="col-md-2" ng-if="showProcess">
+                        <div class="row">
+                            <div class="col-md-12">
+                                <button type="button" ng-click="openProcessDialog(row)" title="İşlem yap"
+                                        class="btn btn-sm btn-dark">
+                                    <i class="fa fa-user-md">
+                                    </i>
+                                </button>
+                            </div>
+                        </div>
+                    </td>
+                    <td class="col-md-2" ng-if="!showProcess">
+                        <div class="row">
+                            <div class="col-md-12">
+                                <button type="button" ng-click="approvePlateReq(row)" title="Onayla"
+                                        class="btn btn-sm btn-success">
+                                    <i class="fa fa-check">
+                                    </i>
+                                </button>
+                            </div>
+                        </div>
+                    </td>
+                    <td class="col-md-2">
+                        <div class="row">
+                            <div class="col-md-12 text-info">
+                                {{row.processLabel }}
+                            </div>
+                        </div>
+                    </td>
+
+                </tr>
+                </tbody>
+
+                <tbody ng-show="vm.isLoading">
+                <tr>
+                    <td colspan="6" class="text-center">Yükleniyor ...</td>
+                </tr>
+
+                </tbody>
+                <tfoot>
+                <tr>
+                    <td class="text-center" st-pagination="" st-items-by-page="8" colspan="7">
+                    </td>
+                </tr>
+                </tfoot>
+            </table>
+        </div>
+        <!--     Buradn itibarten eski kodlar
+        <div class="table-responsive">
             <table ng-if="!isLoading" st-table="rowCollection" class="table table-striped table-hover">
                 <thead>
                 <tr>
+                    <th ng-if="!showProcess">Seç</th>
                     <th>Levha Resmi</th>
                     <th>No</th>
                     <th>İstek Tarihi</th>
@@ -258,13 +384,18 @@
                 </tr>
                 </tfoot>
             </table>
-        </div>
-        <div class="panel-footer"  ng-if="!showProcess">
+        </div>-->
+        <div class="panel-footer" ng-if="!showProcess">
             <center>
                 <button type="button" ng-click="approveAllPlateReq()" title="Onayla"
                         class="btn btn-sm btn-success">
                     <i class="fa fa-check">
                     </i> Hepsini Onayla
+                </button>
+                <button type="button" ng-click="approveSelectedPlateReq()" title="Onayla"
+                        class="btn btn-sm btn-primary">
+                    <i class="fa fa-check">
+                    </i> Seçili Olanları Onayla
                 </button>
             </center>
         </div>
